[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Ground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Monster.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Chest.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/Tile.gd" type="Script" id=5]
[ext_resource path="res://scenes/Circle.tscn" type="PackedScene" id=6]

[node name="Tile" type="Node2D"]
script = ExtResource( 5 )

[node name="Ground" parent="." instance=ExtResource( 1 )]

[node name="Chest" parent="." instance=ExtResource( 3 )]

[node name="Monster" parent="." instance=ExtResource( 2 )]

[node name="Wall" parent="." instance=ExtResource( 4 )]

[node name="Highlight" type="ColorRect" parent="."]
visible = false
margin_right = 16.0
margin_bottom = 16.0
color = Color( 1, 1, 1, 0.2 )

[node name="Control" type="Control" parent="."]
margin_right = 16.0
margin_bottom = 16.0

[node name="RedCircle" parent="." instance=ExtResource( 6 )]

[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_Control_mouse_exited"]
